p4/network-policies/mysql-from-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-from-server
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: serverservice
      ports:
        - port: 3306
          protocol: TCP
