p4/network-policies/planner-to-weatherservice.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planner-to-weatherservice
spec:
  podSelector:
    matchLabels:
      app: planner
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: weatherservice
      ports:
        - port: 9090
          protocol: TCP
