p4/network-policies/rabbitmq-from-planner.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-from-planner
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: planner
      ports:
        - port: 5672
          protocol: TCP
