p4/network-policies/server-to-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: server-to-mysql
spec:
  podSelector:
    matchLabels:
      app: serverservice
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: mysql
      ports:
        - port: 3306
          protocol: TCP
