p4/network-policies/server-to-rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: server-to-rabbitmq
spec:
  podSelector:
    matchLabels:
      app: serverservice
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: rabbitmq
      ports:
        - port: 5672
          protocol: TCP
