p4/network-policies/toposervice-to-mongodb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: toposervice-to-mongodb
spec:
  podSelector:
    matchLabels:
      app: toposervice
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: mongodb
      ports:
        - port: 27017
          protocol: TCP
